feat(categories): api create and delete methods
